[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", "features" = ["v4", "fast-rng", "serde"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
